removed rendered images

--- a/backend/notebook_emotion Detector.ipynb
+++ b/backend/notebook_emotion Detector.ipynb
@@ -726,6 +726,7 @@
     }
    ],
    "source": [
+    "import random\n",
     "def face_detector(img):\n",
     "    \n",
     "    gray = cv2.cvtColor(img.copy(), cv2.COLOR_BGR2GRAY)\n",
@@ -765,9 +766,11 @@
     "    return array_to_img(image), img\n",
     "\n",
     "#Example\n",
-    "img_path = 'uploads/gei_me.jpg'\n",
+    "_hash = str(random.getrandbits(128))\n",
+    "img_name = \"sad-man.jpg\"\n",
+    "img_path = 'uploads/sad-man.jpg'\n",
     "predicted_image, img = predict_image(img_path)\n",
-    "cv2.imwrite(r'uploads/gei.jpg', img)"
+    "cv2.imwrite(r'rendered/result.jpg', img)"
    ]
   },
   {
